; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_futex.c_double_unlock_hb.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_futex.c_double_unlock_hb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.futex_hash_bucket = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.futex_hash_bucket*, %struct.futex_hash_bucket*)* @double_unlock_hb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @double_unlock_hb(%struct.futex_hash_bucket* %0, %struct.futex_hash_bucket* %1) #0 {
  %3 = alloca %struct.futex_hash_bucket*, align 8
  %4 = alloca %struct.futex_hash_bucket*, align 8
  store %struct.futex_hash_bucket* %0, %struct.futex_hash_bucket** %3, align 8
  store %struct.futex_hash_bucket* %1, %struct.futex_hash_bucket** %4, align 8
  %5 = load %struct.futex_hash_bucket*, %struct.futex_hash_bucket** %3, align 8
  %6 = getelementptr inbounds %struct.futex_hash_bucket, %struct.futex_hash_bucket* %5, i32 0, i32 0
  %7 = call i32 @spin_unlock(i32* %6)
  %8 = load %struct.futex_hash_bucket*, %struct.futex_hash_bucket** %3, align 8
  %9 = load %struct.futex_hash_bucket*, %struct.futex_hash_bucket** %4, align 8
  %10 = icmp ne %struct.futex_hash_bucket* %8, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load %struct.futex_hash_bucket*, %struct.futex_hash_bucket** %4, align 8
  %13 = getelementptr inbounds %struct.futex_hash_bucket, %struct.futex_hash_bucket* %12, i32 0, i32 0
  %14 = call i32 @spin_unlock(i32* %13)
  br label %15

15:                                               ; preds = %11, %2
  ret void
}

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
